@@ -2,6 +2,8 @@ Version ?.?.?
     - Date ????-??-??
     - Fixed a regression introduced in version 1.1.0 where pypylon stopped being
       importable when used in an application built with PyInstaller.
+    - Fixed PylonImageBase so that the methods CanSaveWithoutConversion, Save
+      and Load can be used. Added a sample that shows how images can be saved.
 
 Version 1.3.1
     - Date 2018-08-13
